--- a/UnitOfWork/Lanuages/DisplayAndAnnotations.en-US.resx
+++ b/UnitOfWork/Lanuages/DisplayAndAnnotations.en-US.resx
@@ -117,7 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ExistEmail" xml:space="preserve">
+    <value>email with this name is already been exist</value>
+  </data>
+  <data name="ExistPhone" xml:space="preserve">
+    <value>same phone is already been exist</value>
+  </data>
+  <data name="NOPNotCorrect" xml:space="preserve">
+    <value>name or password is not correct</value>
+  </data>
+  <data name="NotEmailOrPhone" xml:space="preserve">
+    <value>field is not like email or phone</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>password</value>
+  </data>
   <data name="PhoneOrEmail" xml:space="preserve">
     <value>phone or email</value>
+  </data>
+  <data name="RequiredError" xml:space="preserve">
+    <value>the {0} field is required.</value>
+  </data>
+  <data name="SLError" xml:space="preserve">
+    <value>{0} Must be at least {1} and at maximum {2} characters.</value>
   </data>
 </root>
