--- a/UnitOfWork/Lanuages/DisplayAndAnnotations.fa-IR.resx
+++ b/UnitOfWork/Lanuages/DisplayAndAnnotations.fa-IR.resx
@@ -117,7 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ExistEmail" xml:space="preserve">
+    <value>ایمیل با این نام قبلا وجود داشته است</value>
+  </data>
+  <data name="ExistPhone" xml:space="preserve">
+    <value>تلفن همراهی مشابه قبلا وجود داشته است</value>
+  </data>
+  <data name="NOPNotCorrect" xml:space="preserve">
+    <value>نام کاربری و یا گذرواژه فاقد اعتبار</value>
+  </data>
+  <data name="NotEmailOrPhone" xml:space="preserve">
+    <value>فیلد مشابه شماره همراه و یا ایمل نمیباشد</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>گزرواژه</value>
+  </data>
   <data name="PhoneOrEmail" xml:space="preserve">
     <value>شماره همراه یا ایمیل</value>
+  </data>
+  <data name="RequiredError" xml:space="preserve">
+    <value>لطفا فیلد  {0}  را وارد کنید</value>
+  </data>
+  <data name="SLError" xml:space="preserve">
+    <value>باید حد اعقل {1} و حد اکثر {2} کاراکتر باشد {0}</value>
   </data>
 </root>
