--- a/UnitOfWork/Lanuages/DisplayAndAnnotations.resx
+++ b/UnitOfWork/Lanuages/DisplayAndAnnotations.resx
@@ -117,7 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ExistEmail" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ExistPhone" xml:space="preserve">
+    <value />
+  </data>
+  <data name="NOPNotCorrect" xml:space="preserve">
+    <value />
+  </data>
+  <data name="NotEmailOrPhone" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value />
+  </data>
   <data name="PhoneOrEmail" xml:space="preserve">
+    <value />
+  </data>
+  <data name="RequiredError" xml:space="preserve">
+    <value />
+  </data>
+  <data name="SLError" xml:space="preserve">
     <value />
   </data>
 </root>
