--- a/UnitOfWork/Lanuages/PublicWord001.resx
+++ b/UnitOfWork/Lanuages/PublicWord001.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="key001" xml:space="preserve">
+    <value />
+  </data>
   <data name="key002" xml:space="preserve">
     <value />
   </data>
@@ -160,6 +163,15 @@
     <value />
   </data>
   <data name="key016" xml:space="preserve">
+    <value />
+  </data>
+  <data name="key017" xml:space="preserve">
+    <value />
+  </data>
+  <data name="key018" xml:space="preserve">
+    <value />
+  </data>
+  <data name="key019" xml:space="preserve">
     <value />
   </data>
 </root>
